<resources>
    <string name="app_name">Lets Chat</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loadscreentext">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="signinemail">Email</string>
    <string name="sigininpassword">Password</string>
    <string name="signUptext">Do not have an account</string>
    <string name="cancel">cancel</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="monoFont">monospace</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_maindashboard">Maindashboard</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="signout">signout</string>
    <string name="setting">setting</string>
    <string name="back">Back</string>
    <string name="send">Send</string>
    <string name="log_out">Log Out</string>
</resources>