<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@string/monoFont"
        android:text="@string/reset_password"
        android:textColor="@color/Blue"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26999998" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/siginmargin"
        android:layout_marginRight="@dimen/siginmargin"
        android:hint="@string/prompt_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.13999999">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailfps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/Back_fps"
        android:layout_width="150sp"
        android:layout_height="50sp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:onClick="backButton"
        app:layout_constraintBottom_toBottomOf="@+id/send_fps"
        app:layout_constraintEnd_toStartOf="@+id/send_fps"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/send_fps" />

    <Button
        android:id="@+id/send_fps"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginTop="70dp"
        android:backgroundTint="@color/Blue"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Back_fps"
        app:layout_constraintTop_toBottomOf="@+id/textField_email" />


</androidx.constraintlayout.widget.ConstraintLayout>