<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/sign_in"
        android:textColor="@color/Blue"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signinEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/siginmargin"
        android:layout_marginRight="@dimen/siginmargin"
        android:layout_marginTop="64dp"
        android:hint="@string/signinemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signinPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:endIconMode="password_toggle"
        android:layout_marginLeft="@dimen/siginmargin"
        android:layout_marginRight="@dimen/siginmargin"
        android:hint="@string/sigininpassword"
        app:layout_constraintTop_toBottomOf="@+id/signinEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signinbutton"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/Blue"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinPassword" />

    <TextView
        android:id="@+id/forgot_ls"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/Blue"

        app:layout_constraintBottom_toTopOf="@+id/signinbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="92dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/signUptext"
        android:textSize="15sp"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signinbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>